# KKG-Area

./: README.md  部屋・壁・ドアマスク.json
kkg-area-detection-develop/: .env.example  .flake8  .gitignore  API_DOCUMENTATION.md  README.md  index.html  pyproject.toml  test_wall_line_extraction.py
kkg-area-detection-develop/.github/: PULL_REQUEST_TEMPLATE.md
kkg-area-detection-develop/.github/workflows/: lint.yaml
kkg-area-detection-develop/colab/pre_process/: preprocess_image.ipynb  preprocess_image_high_quality_architectural.ipynb  preprocess_image_wall.ipynb  preprocess_image_wall_stripe.ipynb
kkg-area-detection-develop/colab/train/: Fine_tune_MaskFormer_on_an_instance_segmentation_room_samelabel_CubiCasa5k_homes_cross.ipynb  Fine_tune_MaskFormer_on_an_instance_segmentation_room_samelabel_CubiCasa5k_homes_cross_curriculum.ipynb  Fine_tune_MaskFormer_on_an_instance_segmentation_room_samelabel_CubiCasa5k_homes_cross_dashlines.ipynb  (+9 more)
kkg-area-detection-develop/docs/: s3_model_download.md
kkg-area-detection-develop/examples/: basic_usage.py  polygon_alignment_example.py  room_detection_example.py  wall_line_advanced_example.py  wall_line_extraction_example.py
kkg-area-detection-develop/kkg_area_detection/: .gitignore  __init__.py  visualization.py
kkg-area-detection-develop/model/: .gitignore
kkg-area-detection-develop/sandbox/: crop_figures_by_gemini.ipynb  detect_pillar_new_sample_1.py  detect_wall.ipynb  extract_contours_and_vertices.ipynb  extract_room_mask.py  fine_tune_maskformer_on_an_instance_segmentation_dataset_(ade20k_full)_room_samelabel.py  postprocess_room_mask.py
(+36 files in other folders)
